tool/src/cpp/snapshots/diplomat_tool__cpp__structs__tests__struct_documentation@Foo.hpp.snap
---
source: tool/src/cpp/structs.rs
expression: out_texts.get(out).unwrap()
---
#ifndef Foo_HPP
#define Foo_HPP
#include <stdint.h>
#include <stddef.h>
#include <stdbool.h>
#include <algorithm>
#include <memory>
#include <variant>
#include <optional>
#include "diplomat_runtime.hpp"

namespace capi {
#include "Foo.h"
}


/**
 * A destruction policy for using Foo with std::unique_ptr.
 */
struct FooDeleter {
  void operator()(capi::Foo* l) const noexcept {
    capi::Foo_destroy(l);
  }
};

/**
 * Documentation for Foo.
 * Second line.
 * 
 * See the [Rust documentation](https://docs.rs/foo/latest/foo/struct.Bar.html) for more information.
 */
struct Foo {
 public:

  /**
   * Documentation for x.
   */
  uint8_t x;

  /**
   * Documentation for get_x.
   * 
   * See the [Rust documentation](https://docs.rs/foo/latest/foo/struct.Bar.html#method.get) for more information.
   */
  uint8_t get_x() const;
};


inline uint8_t Foo::get_x() const {
  return capi::Foo_get_x((capi::Foo*) &this);
}
#endif

